/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package px.services;

option go_package = "configmanagerpb";

import "src/api/proto/vizierconfigpb/vizier_types.proto"; 

// ConfigManagerService provides configuration specs from the Cloud.
service ConfigManagerService {
    //  GetConfigForVizier provides yaml names and content that can be used to deploy Vizier
    rpc GetConfigForVizier(ConfigForVizierRequest) returns (ConfigForVizierResponse);
}

// ConfigForVizierRequest is a request for Vizier yamls given a set of specs.
message ConfigForVizierRequest {
    // Namespace of the Vizier.
    string namespace = 1; 
    // Specs that describe how the Vizier should be configured. 
    vizierconfigpb.VizierSpec vz_spec = 2; 
}

// ConfigForVizierResponse is the response to a ConfigForVizierRequest.
message ConfigForVizierResponse {
    // A map from YAML name to content, containing yamls which can be used to deploy Vizier.
    map<string, string> nameToYamlContent = 1;
}